# wombat

./: .gitignore  CMakeLists.txt  README.md  install.sh  main-cuda.cpp  main.cpp  makefile  notes
scripts/: cpu.sh  cuda.numCPUT-batchSize-batchesPerT.sh  get-data.sh
src/: CMakeLists.txt  arguments.cxx  arguments.h  batch_consumer.cpp  batch_consumer.h  batch_model.cpp  batch_model.h  buffer.cpp  common.h  console.cpp  console.h  consumer.cpp  consumer.h  cuda_batch_model.cpp  cuda_batch_model.h  cuda_consumer.cpp  cuda_consumer.h  cuda_kernel.wombat.cu  cuda_kernel_wrapper.cu  main-cuda.cpp  main.cpp  main.cxx  pht_model.cpp  pht_model.h  pht_nested_model.cpp  pht_nested_model.h  sen_buffer.cpp  sen_buffer.h  sentence_producer.cpp  sentence_producer.h  sgd_batch_trainer.cpp  sgd_batch_trainer.h  sgd_cuda_trainer.cu  sgd_cuda_trainer.h  sgd_mkl_trainer.cpp  sgd_mkl_trainer.h  sgd_trainer.cpp  sgd_trainer.h  shared_consumer.cpp  shared_consumer.h  (+21 more)
src/buffers/: buffer.h  sen_buffer.cpp  sen_buffer.h  tc_buffer.cpp  tc_buffer.h  unlocked_buffer.h
src/buffers/producers/: sentence_producer.cpp  sentence_producer.h  ti_producer.cpp  ti_producer.h
src/buffers/readers/: buffer.h  sen_buffer.cpp  sen_buffer.h  tc_buffer.cpp  tc_buffer.h
src/contiguous_buffer/: int32_ring_buffer.hpp
src/data_source/: word_source_file.cpp  word_source_file.h  word_source_file_group.cpp  word_source_file_group.h  word_source_group.cpp  word_source_group.h
src/neuralnet/: layer.cxx  layer.h  network.cxx  network.h  vector.cxx  vector.h  weights.cxx  weights.h
src/sgd_trainers/: cuda_kernel.wombat.cu  sgd_cuda_trainer.cu  sgd_trainer.cpp
src/training/: context.h  minibatch_sgd_training_strategy.h  words_to_minibatched_sgd_trainer.cxx  words_to_minibatched_sgd_trainer.h
src/training/batching/: minibatch.cxx  minibatch.h  minibatch_indices.h  minibatch_provider.cxx  minibatch_provider.h  minibatching_strategy.h  negative_sampling.cxx  negative_sampling.h  word_with_context_batcher.h
src/training/data/: contiguous.word_with_context.cxx  contiguous.word_with_context.h  contiguous_buffer_backed.word_with_context.hpp  contiguous_word_with_context_buffer.hpp  sentence.h  sentence.visitor.h  stdVector.sentence.cxx  stdVector.sentence.h  word_with_context.h  word_with_context.visitor.h
src/training/data/parsing/: sentence_parser.cxx  sentence_parser.h
src/training/data/source/: file_backed.sentence_producer.cxx  file_backed.sentence_producer.h  file_backed.sentence_source.cxx  file_backed.sentence_source.h  sentence_producer.h  sentence_source.h  stream_backed.word_source.cxx  stream_backed.word_source.h  word_sampling.sentence_source.cxx  word_sampling.sentence_source.h  word_source.h
src/training/data/structure/: contiguous_buffer_backed.word_with_context.cxx  contiguous_buffer_backed.word_with_context.h  contiguous_buffer_backed.word_with_context.hpp  contiguous_word_with_context_buffer.cxx  contiguous_word_with_context_buffer.h  contiguous_word_with_context_buffer.hpp  sentence.h  sentence.visitor.h  stdVector.sentence.cxx  stdVector.sentence.h  word_with_context.h  word_with_context.visitor.h
src/training/sgd/: context.h  cuda_kernel_wrapper.cu  mini_batch.cxx  mini_batch.h  mini_batch_matrix_manager.cxx  mini_batch_matrix_manager.h  minibatch_matrix_manager.cxx  minibatch_matrix_manager.h  minibatching_strategy.h  sgd_batch_trainer.cpp  sgd_batch_trainer.h  sgd_cuda_trainer.cu  sgd_cuda_trainer.h  sgd_mini_batch_trainer.cxx  sgd_mini_batch_trainer.h  sgd_minibatch_trainer.cxx  sgd_minibatch_trainer.h  sgd_mkl_trainer.cpp  sgd_mkl_trainer.h  vector_selection_strategy.h
src/vocabulary/: dictionary.cxx  dictionary.h  producer.cxx  producer.h  stream_backed.word_source.cxx  stream_backed.word_source.h  word2vec.dictionary.cxx  word2vec.dictionary.h  word2vec.wordbag.builder.cxx  word2vec.wordbag.builder.h  word2vec.wordbag.cxx  word2vec.wordbag.h  word_source.h  wordbag.builder.h  wordbag.cxx  wordbag.factory.cxx  wordbag.factory.h  wordbag.h  wordbag_producer.cxx  wordbag_producer.h
src/vocabulary/wordbag/: word2vec.wordbag.builder.cxx  word2vec.wordbag.builder.h  word2vec.wordbag.cxx  word2vec.wordbag.h  wordbag.builder.h  wordbag.factory.cxx  wordbag.factory.h  wordbag.h
tests/: CMakeLists.txt  test_utils.cxx  test_utils.h  util.cxx  word2vec.dictionary.cxx  word2vec.wordbag.cxx
tests/contiguous_buffer/: int32_ring_buffer.cxx
tests/neuralnet/: layer.cxx  network.cxx
tests/resources/: sentence_producer_input.txt  sentence_source_multiline_input.txt  wordbag.txt
tests/training/batching/: minibatch.cxx  negative_sampling.cxx
tests/training/data/: contiguous_word_with_context_buffer.cxx  stdVector.sentence.cxx
tests/training/data/parsing/: sentence_parser.cxx
tests/training/data/source/: file_backed.sentence_producer.cxx  file_backed.sentence_source.cxx  stream_backed.word_source.cxx  word_sampling.sentence_source.cxx
tests/training/data/structure/: contiguous_word_with_context_buffer.cxx  stdVector.sentence.cxx
tests/training/sgd/: mini_batch_matrix_manager.cxx  minibatch_matrix_manager.cxx
tests/vocabulary/: stream_backed.word_source.cxx  wordbag_producer.cxx
tests/vocabulary/wordbag/: word2vec.wordbag.cxx  wordbag.factory.cxx  wordbag.factory.cxx.old
